fixed extra margin on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -619,6 +619,10 @@ footer .container-fluid {
 
 /* Responsive adjustments */
 @media (max-width: 768px) {
+  * {
+    max-width: 100vw !important;
+    overflow-x: hidden !important;
+  }
   .modal-dialog {
     margin: 1rem auto;
   }
